# markdown-localizer-rs

./: .gitignore  Cargo.toml  README.md
example_dir/: example.md
src/: main.rs
src/md/: image.rs  mod.rs
