[package]
name = "md-localizer"
version = "0.1.1"
edition = "2021"
license = "MPL-2.0"
description = "Localize markdown with remote links"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
regex = "1.9"
reqwest = { version = "0.11", features = ["blocking"] }